# minilearn

./: README.md  pyproject.toml
src/minilearn/: __init__.py  base.py
src/minilearn/linear_models/: linear_regression.py
tests/: test_linear_regression.py
