[project]
name = "minilearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Utkarsh736", email = "utkarshtomar736@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
